--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -51,7 +51,7 @@
      class implemented in pokernetwork/userstats.py. Only one <stats> tag
      is permitted. -->
 
-  <delays autodeal_tournament_min="15" autodeal="18" autodeal_max="120" autodeal_check="15" round="12" position="60" showdown="30" finish="18" messages="60" breaks_check="30" extra_wait_tourney_break="60" extra_wait_tourney_start="60" extra_wait_tourney_finish="30"/>
+  <delays autodeal_tournament_min="15" autodeal="18" autodeal_max="120" autodeal_check="15" round="12" position="60" showdown="30" finish="18" messages="60" breaks_check="30" extra_wait_sng_start="30" extra_wait_tourney_start="60" extra_wait_tourney_break="60" extra_wait_tourney_finish="30" />
 
 <!-- extra_waits are additional wait times before hands are dealt at
      various points of the tourney (and at the end).  If they are left
